<resources>

    <string name="app_name">Dt Home Fresh</string>
    <string name="title_activity_categories">CategoriesActivity</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label_string">First Fragment</string>
    <string name="second_fragment_label_string">Second Fragment</string>
    <string name="next_string">Next</string>
    <string name="previous_string">Previous</string>
    <string name="get_started_string">Get Started</string>
    <string name="food_icon_string">Food Icon</string>
    <string name="food_string">Food</string>
    <string name="clothes_icon_string">Clothes Icon</string>
    <string name="clothes_string">Clothes</string>
    <string name="homemade_items_string">Homemade Items</string>
    <string name="dt_homefresh_string">DT HomeFresh</string>
    <string name="home_icon_string">Home Icon</string>
    <string name="menu_button_string">Menu Button</string>
    <string name="up_button_string">Up Button</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="profile_button">Profile Button</string>
    <string name="login_string">Login</string>
    <string name="new_user_string">New User?</string>
    <string name="sign_up_string">Sign Up</string>
    <string name="password_string">Password</string>
    <string name="user_email_id_string">User Email ID</string>
    <string name="have_an_account_string">Have an account?</string>
    <string name="skip_for_now_string">Skip for now</string>
    <string name="seller_image_string">Seller Image</string>
    <string name="owner_name_string">Owner name*</string>
    <string name="brand_name_string">Brand name*</string>
    <string name="phone_number_string">Phone number*</string>
    <string name="whatsapp_number_if_different_string">Whatsapp number (if different)</string>
    <string name="address_string">Address</string>
    <string name="save_string">Save</string>
    <string name="sign_out_string">Sign Out</string>
    <string name="web_client_id">1002985949261-m1ehg56of2bdaep29aokbiaen33663be.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_app_icon">App icon</string>
    <string name="title_activity_onboarding">OnboardingActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="partner_with_us_string">Partner with us</string>
    <string name="contact_us_string">Contact us</string>
    <string name="menu_string">Menu</string>
    <string name="home_string">Home</string>
    <string name="profile_string">Profile</string>
    <string name="all_vendors_string">All vendors</string>

</resources>