<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="sellerListViewModel"
            type="com.example.dthomefresh.viewmodel.SellerListViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/sellers_page_bg">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieAnimationView"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="false"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/up_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="5dp"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:contentDescription="@string/up_button_string"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                android:padding="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/up_arrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/profile_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="5dp"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:contentDescription="@string/profile_button"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                android:padding="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/profile_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_1"
            app:layout_constraintVertical_bias="0.041">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_navigation_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?selectableItemBackground"
                    android:onClick="@{() -> sellerListViewModel.onFood()}"
                    app:cardBackgroundColor="@color/green_4"
                    app:cardCornerRadius="0dp"
                    app:cardElevation="@dimen/navigation_card_elevation"
                    app:contentPadding="@dimen/seller_navigation_padding_vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/navigation_text_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/seller_navigation_padding_horizontal"
                        android:fontFamily="@font/inter_bold"
                        android:text="@string/food_string"
                        android:textColor="@color/green_1"
                        android:textSize="@dimen/seller_navigation_font_size" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_navigation_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?selectableItemBackground"
                    android:onClick="@{() -> sellerListViewModel.onClothes()}"
                    app:cardBackgroundColor="@color/green_4"
                    app:cardCornerRadius="0dp"
                    app:cardElevation="@dimen/navigation_card_elevation"
                    app:contentPadding="@dimen/seller_navigation_padding_vertical"
                    app:layout_constraintStart_toEndOf="@id/card_navigation_1"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/navigation_text_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/seller_navigation_padding_horizontal"
                        android:fontFamily="@font/inter_bold"
                        android:text="@string/clothes_string"
                        android:textColor="@color/green_1"
                        android:textSize="@dimen/seller_navigation_font_size" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_navigation_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?selectableItemBackground"
                    android:onClick="@{() -> sellerListViewModel.onHomemadeItems()}"
                    app:cardBackgroundColor="@color/green_4"
                    app:cardCornerRadius="0dp"
                    app:cardElevation="@dimen/navigation_card_elevation"
                    app:contentPadding="@dimen/seller_navigation_padding_vertical"
                    app:layout_constraintStart_toEndOf="@id/card_navigation_2"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/navigation_text_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/seller_navigation_padding_horizontal"
                        android:fontFamily="@font/inter_bold"
                        android:text="@string/homemade_items_string"
                        android:textColor="@color/green_1"
                        android:textSize="@dimen/seller_navigation_font_size" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--        <com.google.android.material.textfield.TextInputLayout-->
        <!--            android:id="@+id/ti_search_bar"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginHorizontal="20dp"-->
        <!--            android:layout_marginTop="10dp"-->
        <!--            app:boxBackgroundColor="@color/yellow_3"-->
        <!--            app:boxStrokeColor="@color/yellow_2"-->
        <!--            app:errorEnabled="true"-->
        <!--            app:hintTextColor="@color/yellow_2"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/layout_2">-->

        <!--            <com.google.android.material.textfield.TextInputEditText-->
        <!--                android:id="@+id/et_search_bar"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="55dp"-->
        <!--                android:drawableStart="@drawable/search_icon"-->
        <!--                android:drawablePadding="10dp"-->
        <!--                android:inputType="text"-->
        <!--                android:maxLines="1"-->
        <!--                android:textColor="@color/white"-->
        <!--                android:textSize="15sp" />-->

        <!--        </com.google.android.material.textfield.TextInputLayout>-->


        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/search_bar_bg"
            android:drawableStart="@drawable/search_icon"
            app:iconifiedByDefault="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.65"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_2"
            app:layout_constraintVertical_bias="0.037"
            app:queryHint="Search..."
            app:queryBackground="@android:color/transparent"/>


        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_bar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/sellers_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="15dp"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="parent">

                </androidx.recyclerview.widget.RecyclerView>

            </LinearLayout>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
