<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.dthomefresh.viewmodel.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parent_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_sign_up_page">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/anim_sign_up"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="false"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/anim_yellow_processing_circle" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/londrina_solid_regular"
            android:text="@string/sign_up_string"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.175" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:hint="@string/user_email_id_string"
            android:textColorHint="@color/yellow_2"
            app:boxStrokeColor="@color/yellow_2"
            app:errorEnabled="true"
            app:hintTextColor="@color/yellow_2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:hint="@string/password_string"
            android:textColorHint="@color/yellow_2"
            app:boxStrokeColor="@color/yellow_2"
            app:errorEnabled="true"
            app:hintTextColor="@color/yellow_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ti_username"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_re_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:hint="Re-enter Password"
            android:textColorHint="@color/yellow_2"
            app:boxStrokeColor="@color/yellow_2"
            app:errorEnabled="true"
            app:hintTextColor="@color/yellow_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ti_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_re_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/bt_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/yellow_2"
            android:fontFamily="@font/londrina_solid_regular"
            android:text="@string/sign_up_string"
            android:textColor="@color/black"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ti_re_password"
            app:layout_constraintVertical_bias="0.0" />

        <!--        <Button-->
        <!--            android:id="@+id/bt_skip_for_now"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="40dp"-->
        <!--            android:backgroundTint="@android:color/transparent"-->
        <!--            android:fontFamily="@font/londrina_solid_regular"-->
        <!--            android:text="@string/skip_for_now_string"-->
        <!--            android:textColor="@color/yellow_2"-->
        <!--            android:textSize="18sp"-->
        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/bt_sign_up"-->
        <!--            app:layout_constraintVertical_bias="0" />-->


        <!--        <Switch-->
        <!--            android:id="@+id/switch1"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:checked="true"-->
        <!--            android:fontFamily="@font/londrina_solid_regular"-->
        <!--            android:text="Are you a seller?"-->
        <!--            android:textColor="@color/white"-->
        <!--            android:textSize="15sp"-->
        <!--            app:layout_constraintBottom_toTopOf="@+id/bt_sign_up"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintHorizontal_bias="0.511"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/ti_re_password"-->
        <!--            app:layout_constraintVertical_bias="0.2"-->
        <!--            tools:ignore="UseSwitchCompatOrMaterialXml" />-->

        <!--        <androidx.cardview.widget.CardView-->
        <!--            android:id="@+id/bt_google_sign_up"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:backgroundTint="@color/button_border_gray"-->
        <!--            android:clickable="true"-->
        <!--            android:elevation="10dp"-->
        <!--            android:focusable="true"-->
        <!--            android:foreground="?selectableItemBackground"-->
        <!--            android:padding="5dp"-->
        <!--            app:cardCornerRadius="10dp"-->
        <!--            app:layout_constraintBottom_toTopOf="@+id/bt_sign_up"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/ti_re_password"-->
        <!--            app:layout_constraintVertical_bias="0">-->

        <!--            <LinearLayout-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="match_parent"-->
        <!--                android:layout_gravity="center_horizontal">-->

        <!--                <ImageView-->
        <!--                    android:layout_width="30dp"-->
        <!--                    android:layout_height="match_parent"-->
        <!--                    android:padding="4dp"-->
        <!--                    android:src="@drawable/google_logo" />-->

        <!--                <TextView-->
        <!--                    android:layout_width="wrap_content"-->
        <!--                    android:layout_height="wrap_content"-->
        <!--                    android:layout_marginVertical="10dp"-->
        <!--                    android:layout_marginStart="5dp"-->
        <!--                    android:layout_marginEnd="10dp"-->
        <!--                    android:text="Sign in with Google"-->
        <!--                    android:textColor="@color/white" />-->

        <!--            </LinearLayout>-->

        <!--        </androidx.cardview.widget.CardView>-->

        <!--            android:onClickListener="@{()-> viewModel.onGoogleSignInClick()}"-->
        <!--            />-->

        <com.google.android.gms.common.SignInButton
            android:id="@+id/bt_google_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.85" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_google_sign_in"
            app:layout_constraintVertical_bias="0.169"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:id="@+id/no_account_yet"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:fontFamily="@font/londrina_solid_regular"
                android:text="@string/have_an_account_string"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@id/bt_sign_up"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/londrina_solid_regular"
                android:padding="0dp"
                android:text="@string/login_string"
                android:textColor="@color/yellow_2"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/no_account_yet"
                app:layout_constraintTop_toBottomOf="parent" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>